--- a/viridian/reef/example.conf.env
+++ b/viridian/reef/example.conf.env
@@ -12,4 +12,4 @@ SEASIDE_SVR_INDEX=82
 SEASIDE_RESOLV_CONF_PATH=/etc/resolv.conf
 
 # Client logging level
-SEASIDE_LOG_LEVEL=INFO  # Same effect as 'RUST_LOG'
+SEASIDE_LOG_LEVEL=INFO
