--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -1,70 +1,11 @@
-[package]
-name = "SeasideVPN-Reef"
-version = "0.0.4"
-edition = "2021"
-description = "A production-ready SeasideVPN client for Linux and Windows"
-authors = [
-    "Alexander Sergeev <alexander.sergeev@onmail.com>"
+[workspace]
+resolver = "2"
+members = [
+    "cli_executable",
+    "rust_library",
+    "shared_library",
+    "test_library"
 ]
 
-
-
-[dependencies]
-base64 = "^0.22.1"
-bincode = "^2.0.1"
-blake2 = "^0.10.6"
-byte-pool = "^0.2.4"
-bytes = "^1.10.1"
-cached = "^0.56.0"
-chacha20poly1305 = "^0.10.1"
-env_logger = "^0.11.5"
-futures = "^0.3.31"
-ipnet = "^2.10.1"
-lazy_static = "^1.5.0"
-log = "^0.4.22"
-num_enum = "^0.7.3"
-prost = "^0.14.1"
-rand = "^0.8.5"
-regex = "^1.11.1"
-simple-error = "^0.3.1"
-socket2 = "^0.6.0"
-structopt = { version = "^0.3.26", optional = true }
-tokio = { version = "^1.47.1", features = ["full"] }
-url = "^2.5.7"
-x25519-dalek = { version = "^2.0.1", features = ["static_secrets"] }
-
-[target.'cfg(target_os = "linux")'.dependencies]
-nftables = "^0.6.3"
-rtnetlink = "^0.18.0"
-tun = { version = "^0.8.3", features = ["async"] }
-
-[target.'cfg(target_os = "windows")'.dependencies]
-etherparse = "^0.19.0"
-serde = "^1.0.219"
-windivert = "^0.6.0"
-windows = { version = "^0.61.3", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"] }
-wmi = "^0.17.2"
-
-[build-dependencies]
-prost-build = "^0.14.1"
-protoc-bin-vendored = "^3.2.0"
-
-[target.'cfg(target_os = "windows")'.build-dependencies]
-reqwest = { version = "^0.12.23", features = ["blocking", "json"] }
-zip = "^4.5.0"
-
-
-
-[features]
-cli-exec = ["structopt"]
-
-
-
-[lib]
-name = "reeflib"
-path = "src/lib/mod.rs"
-
-[[bin]]
-name = "cli"
-path = "src/cli.rs"
-required-features = ["cli-exec"] 
+[profile.release]
+strip = true
