executable name fixed

--- a/viridian/reef/Dockerfile
+++ b/viridian/reef/Dockerfile
@@ -15,7 +15,7 @@ COPY viridian/reef/common_library/Cargo.toml viridian/reef/common_library/
 COPY viridian/reef/shared_library/Cargo.toml viridian/reef/shared_library/
 COPY viridian/reef/standalone_executable/Cargo.toml viridian/reef/standalone_executable/
 COPY viridian/reef/test_library/Cargo.toml viridian/reef/test_library/
-RUN cargo build --manifest-path viridian/reef/Cargo.toml --bin cli --lib || true
+RUN cargo build --manifest-path viridian/reef/Cargo.toml --bin seaside_standalone --lib || true
 
 COPY viridian/reef/common_library/ viridian/reef/common_library/
 COPY viridian/reef/shared_library/ viridian/reef/shared_library/
@@ -25,7 +25,7 @@ COPY viridian/reef/test_library/ viridian/reef/test_library/
 
 FROM downloader AS builder
 
-RUN cargo build --manifest-path viridian/reef/Cargo.toml --bin cli --lib
+RUN cargo build --manifest-path viridian/reef/Cargo.toml --bin seaside_standalone --lib
 
 
 FROM downloader AS tester
@@ -50,7 +50,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && apt-get install -y --no-install-recommends iptables iproute2 python3-pip && rm -rf /var/lib/apt/lists/* && pip install --no-cache-dir pytest pytest-timeout
 COPY viridian/algae/tests/conftest.py viridian/algae/tests/test_local.py tests/
-COPY --from=builder /seaside/viridian/reef/target/debug/cli cli
+COPY --from=builder /seaside/viridian/reef/target/debug/seaside_standalone seaside_exe
 
 VOLUME /seaside/viridian
 
@@ -59,7 +59,7 @@ ENV SEASIDE_ADDRESS=
 ENV SEASIDE_API_PORT=
 
 ENV TEST_COMMAND="pytest --log-cli-level=INFO tests/test_local.py"
-ENV RUN_COMMAND="./cli -a \$SEASIDE_ADDRESS -c \$SEASIDE_API_PORT -k ... -t ... -p \$SEASIDE_PAYLOAD_VIRIDIAN -e \"\$TEST_COMMAND\""
+ENV RUN_COMMAND="./seaside_exe -a \$SEASIDE_ADDRESS -c \$SEASIDE_API_PORT -k ... -t ... -p \$SEASIDE_PAYLOAD_VIRIDIAN -e \"\$TEST_COMMAND\""
 ENTRYPOINT ["sh", "-c", "ip route replace default via \"$ARG_NETWORK_GATEWAY\" && eval \"$RUN_COMMAND\""]
 
 HEALTHCHECK --interval=1m --timeout=1s --retries=3 --start-period=10s --start-interval=3s CMD ls /sys/class/net | grep tun0
