--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -142,6 +142,17 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
 
+      - name: Setup Rust 🦀
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: "1.89.0"
+          target: x86_64-unknown-linux-gnu
+          rust-src-dir: viridian/reef
+          override: true
+
+      - name: Install Network Manager and Dependencies
+        run: sudo apt-get install network-manager build-essential libnm-dev libglib2.0-dev libglib2.0-dev-bin libgtk-3-dev pkg-config
+
       - name: Setup VPN Server 🖴
         id: setup-test-server
         uses: ./.github/actions/setup-server
@@ -151,13 +162,25 @@ jobs:
           higher_port: ${{ env.TARGET_HIGHER_PORT }}
           test-command: ${{ env.TEST_COMMAND }} --local-port 44443
 
-      - name: Build Docker Image
-        working-directory: viridian/reef
-        run: docker build --target nm-tester -t nm-tester-image .
+      - name: Install Network Manager
+        working-directory: viridian/barnacles/network-manager
+        run: make install
+
+      - name: Create VPN Connections
+        run: |
+          sudo nmcli connection add type ethernet con-name dummy-eth ifname eth0
+          sudo nmcli connection up dummy-eth
+          sudo nmcli connection add type vpn con-name seaside-vpn-port ifname dummy-eth vpn-type seasidevpn 
+          sudo nmcli connection modify seaside-vpn-port vpn.data "certificate=${{ steps.setup-test-server.outputs.connection-certificate }},protocol=port" 
+          sudo nmcli connection add type vpn con-name seaside-vpn-typhoon ifname dummy-eth vpn-type seasidevpn
+          sudo nmcli connection modify seaside-vpn-typhoon vpn.data "certificate=${{ steps.setup-test-server.outputs.connection-certificate }},protocol=typhoon"
 
       - name: Test Viridian Reef PORT (integration) 🧪
         working-directory: viridian/reef
-        run: docker run --privileged --network=host -e PROTOCOL=port -e TEST_COMMAND="${{ env.TEST_COMMAND }} --local-port 44444" -v /seaside/viridian/certificate.sea:${{ steps.setup-test-server.outputs.connection-certificate }} nm-tester-image
+        run: |
+          sudo nmcli connection up seaside-vpn-port
+          ${{ env.TEST_COMMAND }} --local-port 44444
+          sudo nmcli connection down seaside-vpn-port
 
       - name: Test Viridian Reef TYPHOON (integration) 🧪
         working-directory: viridian/reef
