--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,11 +56,15 @@ jobs:
 
   caerulean-whirlpool-build:
     name: Build Caerulean Whirlpool Server Executable
-    runs-on: ubuntu-24.04${{ matrix.arch == 'amd64' && '' || '-arm' }}
+    runs-on: ${{ matrix.image }}
     strategy:
       fail-fast: false
       matrix:
-        arch: [amd64, arm64]
+        include:
+          - arch: amd64
+            image: ubuntu-24.04
+          - arch: arm64
+            image: ubuntu-24.04-arm
 
     steps:
       - name: Checkout 🛎️
@@ -107,19 +111,20 @@ jobs:
 
   viridian-reef-build:
     name: Build Viridian Reef Client Executable
-    runs-on: ${{ matrix.os == 'linux' && 'ubuntu-24.04' || 'windows-latest' }}${{ matrix.arch == 'amd64' && '' || '-arm' }}
-    env:
-      TARGET: ${{ matrix.arch == 'amd64' && 'x86_64' || 'aarch64' }}-${{ matrix.os == 'linux' && 'unknown-linux-gnu' || 'pc-windows-msvc' }}
+    runs-on: ${{ matrix.image }}
     strategy:
       fail-fast: false
       matrix:
         include:
           - arch: amd64
-            os: linux
+            image: ubuntu-24.04
+            target: x86_64-unknown-linux-gnu
           - arch: amd64
-            os: windows
+            image: windows-2025
+            target: x86_64-pc-windows-msvc
           - arch: arm64
-            os: linux
+            image: ubuntu-24.04-arm
+            target: aarch64-unknown-linux-gnu
 
     steps:
       - name: Checkout 🛎️
@@ -129,7 +134,7 @@ jobs:
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: stable
-          target: ${{ env.TARGET }}
+          target: ${{ matrix.target }}
           rust-src-dir: viridian/reef
           override: true
 
@@ -148,10 +153,10 @@ jobs:
       - name: Rename Executable 📛
         working-directory: viridian/reef
         env:
-          EXEC_SRC: ${{ matrix.os == 'linux' && 'cli' || 'cli.exe' }}
-          EXEC_STEM: ${{ format('viridian_reef_executable_{0}_{1}', matrix.os, matrix.arch) }}
-          EXEC_EXT: ${{ matrix.os == 'linux' && 'run' || 'exe' }}
-        run: mv target/${{ env.TARGET }}/release/${{ env.EXEC_SRC }} target/${{ env.EXEC_STEM }}.${{ env.EXEC_EXT }}
+          EXEC_SRC: ${{ runner.os == 'Linux' && 'cli' || 'cli.exe' }}
+          EXEC_STEM: ${{ format('viridian_reef_executable_{0}_{1}', runner.os, matrix.arch) }}
+          EXEC_EXT: ${{ runner.os == 'Linux' && 'run' || 'exe' }}
+        run: mv target/${{ matrix.target }}/release/${{ env.EXEC_SRC }} target/${{ env.EXEC_STEM }}.${{ env.EXEC_EXT }}
 
       - name: Create Artifact Name From Branch Name 🌱
         uses: mad9000/actions-find-and-replace-string@5
@@ -165,7 +170,7 @@ jobs:
       - name: Save Artifact 🏺
         uses: actions/upload-artifact@v4
         with:
-          name: viridian-reef-executable-${{ steps.branch-name.outputs.value }}-${{ matrix.os }}-${{ matrix.arch }}
+          name: viridian-reef-executable-${{ steps.branch-name.outputs.value }}-${{ runner.os }}-${{ matrix.arch }}
           path: viridian/reef/target/viridian_reef_executable_*.*
           retention-days: 3
           if-no-files-found: error
