--- a/viridian/barnacles/network-manager/configuration/service.conf
+++ b/viridian/barnacles/network-manager/configuration/service.conf
@@ -7,6 +7,7 @@
 		<allow receive_sender="org.freedesktop.NetworkManager.seasidevpn"/>
 	</policy>
 	<policy context="default">
+		<deny own="org.freedesktop.NetworkManager.seasidevpn"/>
 		<deny send_destination="org.freedesktop.NetworkManager.seasidevpn"/>
 	</policy>
 </busconfig>
