secrets absence fixed

--- a/viridian/barnacles/network-manager/configuration/descriptor.ini
+++ b/viridian/barnacles/network-manager/configuration/descriptor.ini
@@ -8,4 +8,6 @@ supports-multiple-connections=false
 plugin=PATH-TO-SEASIDEVPN-EDITOR
 
 [GNOME]
-supports-external-ui-mode=true
+auth-dialog=SEASIDE-AUTH-DIALOG
+supports-external-ui-mode=false
+supports-hints=false
