--- a/viridian/barnacles/network-manager/Makefile
+++ b/viridian/barnacles/network-manager/Makefile
@@ -25,6 +25,7 @@ endif
 
 G_C_FLAGS_GTK_3 := $(G_C_FLAGS) $(shell pkg-config --cflags --libs gtk+-3.0)
 G_C_FLAGS_GTK_4 := $(G_C_FLAGS) $(shell pkg-config --cflags --libs gtk4)
+G_C_FLAGS_SECRET := $(G_C_FLAGS) $(shell pkg-config --cflags --libs libsecret-1)
 BUILD_ARCH := $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 PLUGIN_NAME := seasidevpn
@@ -51,6 +52,7 @@ INSTALL_CONF := $(NM_DBUS_DIR)/nm-$(PLUGIN_NAME)-service.conf
 INSTALL_EDITOR := $(PLUGIN_DIR)/libnm-vpn-plugin-$(PLUGIN_NAME).so
 INSTALL_INTERFACE_GTK3 := $(PLUGIN_INTERFACE_BASE)-gtk3.so
 INSTALL_INTERFACE_GTK4 := $(PLUGIN_INTERFACE_BASE)-gtk4.so
+INSTALL_DIALOG := $(SERVICE_DIR)/nm-$(PLUGIN_NAME)-auth-dialog
 
 EXTRA_FLAGS := -DSEASIDE_PLUGIN_SERVICE="\"$(SERVICE_NAME)\"" -DEDITOR_INTERFACE_PATH="\"$(PLUGIN_INTERFACE_BASE)\""
 
@@ -63,6 +65,7 @@ dir-build:
 editor-build: dir-build
 	@ # Build network manager reef editor
 	glib-compile-resources $(NM_EDITOR_DIR)/gresource.xml --sourcedir=$(NM_EDITOR_DIR) --target=$(NM_BUILD_DIR)/resources.gen.c --generate-source
+	gcc $(NM_EDITOR_DIR)/auth_dialog.c -o $(NM_BUILD_DIR)/auth_dialog $(G_C_FLAGS_SECRET)
 	gcc -fPIC -shared $(NM_EDITOR_DIR)/editor.c $(NM_EDITOR_DIR)/editor.h -o $(NM_BUILD_DIR)/editor.so $(G_C_FLAGS) $(EXTRA_FLAGS)
 	gcc -fPIC -shared $(NM_EDITOR_DIR)/*.h $(NM_EDITOR_DIR)/interface_gtk3.c $(NM_BUILD_DIR)/resources.gen.c -o $(NM_BUILD_DIR)/interface-gtk3.so $(EXTRA_FLAGS) $(G_C_FLAGS_GTK_3)
 	gcc -fPIC -shared $(NM_EDITOR_DIR)/*.h $(NM_EDITOR_DIR)/interface_gtk4.c $(NM_BUILD_DIR)/resources.gen.c -o $(NM_BUILD_DIR)/interface-gtk4.so $(EXTRA_FLAGS) $(G_C_FLAGS_GTK_4)
@@ -80,6 +83,7 @@ config-build: dir-build
 	sed -i "s|DBUS-SERVICE-NAME|$(SERVICE_NAME)|" $(NM_BUILD_DIR)/descriptor.ini.gen
 	sed -i "s|PATH-TO-SEASIDEVPN-PLUGIN|$(INSTALL_PLUGIN)|" $(NM_BUILD_DIR)/descriptor.ini.gen
 	sed -i "s|PATH-TO-SEASIDEVPN-EDITOR|$(INSTALL_EDITOR)|" $(NM_BUILD_DIR)/descriptor.ini.gen
+	sed -i "s|SEASIDE-AUTH-DIALOG|$(INSTALL_DIALOG)|" $(NM_BUILD_DIR)/descriptor.ini.gen
 .PHONY: config-build
 
 build: editor-build plugin-build config-build
@@ -94,6 +98,7 @@ install: build
 	sudo install -D -m 644 $(NM_BUILD_DIR)/editor.so $(INSTALL_EDITOR)
 	sudo install -D -m 644 $(NM_BUILD_DIR)/interface-gtk3.so $(INSTALL_INTERFACE_GTK3)
 	sudo install -D -m 644 $(NM_BUILD_DIR)/interface-gtk4.so $(INSTALL_INTERFACE_GTK4)
+	sudo install -D -m 755 $(NM_BUILD_DIR)/auth_dialog $(INSTALL_DIALOG)
 	sudo install -D -m 644 $(NM_BIN_DIR)/libseaside.so $(INSTALL_BIN)
 ifneq ($(RUNNING_IN_DOCKER),true)
 	sudo systemctl restart NetworkManager
@@ -116,5 +121,5 @@ endif
 clean:
 	@ # Clean network manager plugin build artifacts
 	rm -rf $(NM_BUILD_DIR)
-	sudo rm -f $(INSTALL_PLUGIN) $(INSTALL_NAME) $(INSTALL_CONF) $(INSTALL_EDITOR) $(INSTALL_INTERFACE_GTK3) $(INSTALL_INTERFACE_GTK4) $(INSTALL_BIN)
+	sudo rm -f $(INSTALL_PLUGIN) $(INSTALL_NAME) $(INSTALL_CONF) $(INSTALL_EDITOR) $(INSTALL_INTERFACE_GTK3) $(INSTALL_INTERFACE_GTK4) $(INSTALL_DIALOG) $(INSTALL_BIN)
 .PHONY: clean
